# claude-code-archive

./: .dockerignore  .env.local.sample  .envrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PRIVACY.md  README.md  components.json  docker-compose.yml  drizzle.config.ts  flake.nix  gatecheck.yaml  index.html  lefthook.yml  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsdown.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/commands/: refine-release-note.md  security-audit.md
.claude/hooks/: on-cwd-changed.sh  on-file-changed.sh  on-session-start.sh  shared.sh
.github/ISSUE_TEMPLATE/: schema-parse-error.yml
.github/workflows/: README.md  claude.yml  pinact.yml  release.yml
dev/lints/: conventions.js
docs/: AGENT_CONTEXT_HANDOFF.md  ARCHITECTURE.md  CONTEXT.md  CURRENT_STATUS.md  JSONL_SCHEMA.md  KNOWLEDGE_EXTRACTION.md  PHASE1_TASKS.md  README.md  ROADMAP.md  claude-code-tasks.md  dev.md
docs/guidelines/: branch_naming.md  commit_message.md  definition_of_done.md  internal_review.md  qa_guideline.md
e2e/: config.ts  testDevices.ts
scripts/: build.sh  docker-entrypoint.sh  i18n-check-key-equals-translation.sh  lingui-check.sh  lingui-sort.js  put-transtation.js  release.ts  security-check.sh
src/: sw.ts
tests/: test_agent_context.py  test_annotations.py  test_auth.py  test_content_blocks.py  test_markdown.py  test_parser.py  test_rendering.py  test_scanner.py  test_search.py  test_stats.py  test_watcher.py  test_web.py
(+577 files in other folders)
